--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon"  href="./public/yogesh.png" />
+    <link rel="icon"  href="/yogesh.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Yogesh</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Outfit:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <title>Yogesh | Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
