add google verfication key

--- a/index.html
+++ b/index.html
@@ -1,33 +1,42 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon"  href="/yogesh.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Outfit:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <title>Yogesh Chavan | Software Engineer & Full Stack Developer</title>
-    <meta name="description" content="Portfolio of Yogesh Chavan, a Software Engineer and Full Stack Developer specializing in building solid, scalable digital solutions with modern web technologies." />
-    <meta name="keywords" content="Yogesh, Yogesh Chavan, Yogesh Developer, Software Engineer, Full Stack Developer, React Developer, Web Developer, Portfolio" />
-    <meta name="author" content="Yogesh Chavan" />
-    
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://yogeshchavan.dev/" />
-    <meta property="og:title" content="Yogesh Chavan | Software Engineer & Full Stack Developer" />
-    <meta property="og:description" content="Portfolio of Yogesh Chavan, a Software Engineer and Full Stack Developer specializing in building solid, scalable digital solutions." />
-    <meta property="og:image" content="/og-image.png" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://yogeshchavan.dev/" />
-    <meta property="twitter:title" content="Yogesh Chavan | Software Engineer & Full Stack Developer" />
-    <meta property="twitter:description" content="Portfolio of Yogesh Chavan, a Software Engineer and Full Stack Developer specializing in building solid, scalable digital solutions." />
-    <meta property="twitter:image" content="/og-image.png" />
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" href="/yogesh.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Outfit:wght@400;500;600;700&display=swap"
+    rel="stylesheet">
+  <title>Yogesh Chavan | Software Engineer & Full Stack Developer</title>
+  <meta name="description"
+    content="Portfolio of Yogesh Chavan, a Software Engineer and Full Stack Developer specializing in building solid, scalable digital solutions with modern web technologies." />
+  <meta name="keywords"
+    content="Yogesh, Yogesh Chavan, Yogesh Developer, Software Engineer, Full Stack Developer, React Developer, Web Developer, Portfolio" />
+  <meta name="author" content="Yogesh Chavan" />
 
-    <!-- Structured Data (JSON-LD) -->
-    <script type="application/ld+json">
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://yogeshchavan.dev/" />
+  <meta property="og:title" content="Yogesh Chavan | Software Engineer & Full Stack Developer" />
+  <meta property="og:description"
+    content="Portfolio of Yogesh Chavan, a Software Engineer and Full Stack Developer specializing in building solid, scalable digital solutions." />
+  <meta property="og:image" content="/og-image.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://yogeshchavan.dev/" />
+  <meta property="twitter:title" content="Yogesh Chavan | Software Engineer & Full Stack Developer" />
+  <meta property="twitter:description"
+    content="Portfolio of Yogesh Chavan, a Software Engineer and Full Stack Developer specializing in building solid, scalable digital solutions." />
+  <meta property="twitter:image" content="/og-image.png" />
+  <meta name="google-site-verification" content="google7f1eb35d57402ebb.html" />
+
+
+  <!-- Structured Data (JSON-LD) -->
+  <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "Person",
@@ -46,9 +55,11 @@
         "description": "I specialize in full-stack architecture, crafting high-performance web applications that bridge the gap between complex engineering and intuitive user experience."
       }
     </script>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
