add seo friendly h1 tags

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <link rel="icon" href="/yogesh.png" />
   <link rel="canonical" href="https://yogeshchavan.dev" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Preload Critical Hero Image -->
+  <link rel="preload" as="image" href="/edu.jpg" fetchpriority="high" />
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
