chore(seo): fix: json+ld urls

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" href="/yogesh.png" />
-  <link rel="canonical" href="https://yogeshchavan.dev" />
+  <link rel="canonical" href="https://yogeshchavan.in" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Preload Critical Hero Image -->
@@ -19,12 +19,12 @@
   <meta name="description"
     content="Official Portfolio of Yogesh Chavan. A Software Engineer and Full Stack Developer building scalable web applications with React, Node.js, and modern tech." />
   <meta name="keywords"
-    content="Yogesh, Yogesh Chavan, Yogesh Developer, Yogesh Chavan Website, Software Engineer, Full Stack Developer, React Developer, MERN Stack, Portfolio, Web Developer" />
+    content="Yogesh Chavan, Yogesh Developer, Yogesh Chavan Portfolio" />
   <meta name="author" content="Yogesh Chavan" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://yogeshchavan.dev/" />
+  <meta property="og:url" content="https://yogeshchavan.in/" />
   <meta property="og:title" content="Yogesh Chavan | Software Engineer & Full Stack Developer" />
   <meta property="og:description"
     content="Official Portfolio of Yogesh Chavan. A Software Engineer and Full Stack Developer building scalable web applications." />
@@ -32,7 +32,7 @@
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://yogeshchavan.dev/" />
+  <meta property="twitter:url" content="https://yogeshchavan.in/" />
   <meta property="twitter:title" content="Yogesh Chavan | Software Engineer & Full Stack Developer" />
   <meta property="twitter:description"
     content="Official Portfolio of Yogesh Chavan. A Software Engineer and Full Stack Developer building scalable web applications." />
@@ -46,8 +46,8 @@
         "@context": "https://schema.org",
         "@type": "Person",
         "name": "Yogesh Chavan",
-        "url": "https://yogeshchavan.dev",
-        "image": "https://yogeshchavan.dev/yogesh.png",
+        "url": "https://yogeshchavan.in",
+        "image": "https://yogeshchavan.in/yogesh.png",
         "sameAs": [
           "https://github.com/yogeshchavan", 
           "https://linkedin.com/in/yogeshchavan"
