fix: sitemap and main page

--- a/index.html
+++ b/index.html
@@ -42,24 +42,38 @@
 
   <!-- Structured Data (JSON-LD) -->
   <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type": "Person",
-        "name": "Yogesh Chavan",
-        "url": "https://yogeshchavan.dev",
-        "image": "https://yogeshchavan.dev/yogesh.png",
-        "sameAs": [
-          "https://github.com/yogeshchavan", 
-          "https://linkedin.com/in/yogeshchavan"
-        ],
-        "jobTitle": "Software Engineer",
-        "worksFor": {
-          "@type": "Organization",
-          "name": "Freelance"
-        },
-        "description": "I specialize in full-stack architecture, crafting high-performance web applications that bridge the gap between complex engineering and intuitive user experience."
-      }
-    </script>
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "@id": "https://yogeshchavan.in/#person",
+  "name": "Yogesh Chavan",
+  "url": "https://yogeshchavan.in",
+  "image": "https://yogeshchavan.in/yogesh.png",
+  "sameAs": [
+    "https://github.com/YOGESH-D-CHAVAN",
+    "https://www.linkedin.com/in/yogesh-chavan-494196316/"
+  ],
+  "jobTitle": "Full Stack Developer",
+  "worksFor": {
+    "@type": "Organization",
+    "name": "Self-Employed"
+  },
+  "address": {
+    "@type": "PostalAddress",
+    "addressCountry": "India"
+  },
+  "knowsAbout": [
+    "React",
+    "Node.js",
+    "MongoDB",
+    "Cloudinary",
+    "Full Stack Development",
+    "Web Performance Optimization"
+  ],
+  "description": "Full Stack Developer specializing in high-performance web applications, scalable backend systems, and modern frontend architecture."
+}
+</script>
+
 </head>
 
 <body>
