--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
   <title>Yogesh Chavan - Software Engineer & Full Stack Developer</title>
   <meta name="description"
     content="Official Portfolio of Yogesh Chavan. A Software Engineer and Full Stack Developer building scalable web applications with React, Node.js, and modern tech." />
-  <meta name="keywords"
-    content="Yogesh Chavan, Yogesh Developer, Yogesh Chavan Portfolio" />
+  <meta name="keywords" content="Yogesh Chavan, Yogesh Developer, Yogesh Chavan Portfolio" />
   <meta name="author" content="Yogesh Chavan" />
 
   <!-- Open Graph / Facebook -->
@@ -42,7 +41,6 @@
 
   <!-- Structured Data (JSON-LD) -->
   <script type="application/ld+json">
-<<<<<<< HEAD
 {
   "@context": "https://schema.org",
   "@type": "Person",
@@ -51,13 +49,13 @@
   "url": "https://yogeshchavan.in",
   "image": "https://yogeshchavan.in/yogesh.png",
   "sameAs": [
-    "https://github.com/YOGESH-D-CHAVAN",
+    "https://github.com/Yogesh100-design/",
     "https://www.linkedin.com/in/yogesh-chavan-494196316/"
   ],
-  "jobTitle": "Full Stack Developer",
+  "jobTitle": "Software Engineer & Full Stack Developer",
   "worksFor": {
     "@type": "Organization",
-    "name": "Self-Employed"
+    "name": "Freelance"
   },
   "address": {
     "@type": "PostalAddress",
@@ -71,30 +69,9 @@
     "Full Stack Development",
     "Web Performance Optimization"
   ],
-  "description": "Full Stack Developer specializing in high-performance web applications, scalable backend systems, and modern frontend architecture."
+  "description": "I specialize in full-stack architecture, crafting high-performance web applications that bridge the gap between complex engineering and intuitive user experience."
 }
 </script>
-
-=======
-      {
-        "@context": "https://schema.org",
-        "@type": "Person",
-        "name": "Yogesh Chavan",
-        "url": "https://yogeshchavan.in",
-        "image": "https://yogeshchavan.in/yogesh.png",
-        "sameAs": [
-          "https://github.com/yogeshchavan", 
-          "https://linkedin.com/in/yogeshchavan"
-        ],
-        "jobTitle": "Software Engineer",
-        "worksFor": {
-          "@type": "Organization",
-          "name": "Freelance"
-        },
-        "description": "I specialize in full-stack architecture, crafting high-performance web applications that bridge the gap between complex engineering and intuitive user experience."
-      }
-    </script>
->>>>>>> 5b4ef22b9db8465261d92830b4b382431d640feb
 </head>
 
 <body>
