--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="/yogesh.png" />
+  <link rel="icon" href="/logo.png" />
   <link rel="canonical" href="https://yogeshchavan.in" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -47,7 +47,7 @@
   "@id": "https://yogeshchavan.in/#person",
   "name": "Yogesh Chavan",
   "url": "https://yogeshchavan.in",
-  "image": "https://yogeshchavan.in/yogesh.png",
+  "image": "https://yogeshchavan.in/logo.png",
   "sameAs": [
     "https://github.com/Yogesh100-design/",
     "https://www.linkedin.com/in/yogesh-chavan-494196316/"
